--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "dagre-d3",
-  "version": "0.4.17",
+  "version": "0.4.18",
   "main": [
     "dist/dagre-d3.core.js"
   ],
@@ -23,9 +23,9 @@
     "test/**"
   ],
   "dependencies": {
-    "d3": "^3.3.8",
-    "dagre": "^0.7.3",
-    "graphlib": "^1.0.5",
+    "d3": "^3.5.17",
+    "ciena-dagre": "^1.0.4",
+    "ciena-graphlib": "^1.0.6",
     "lodash": "^3.10.0"
   }
 }
