--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dagre-d3",
-  "version": "0.4.18",
+  "version": "0.5.0",
   "description": "A D3-based renderer for Dagre",
   "author": "Chris Pettitt <chris@samsarin.com>",
   "contributors": [
@@ -20,7 +20,7 @@
     "lodash": "^4.17.4"
   },
   "scripts": {
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "build": "npm run clean && npm run build-version && npm run build-lib && npm run build-dist",
     "build-dist": "webpack && uglifyjs ./dist/dagre-d3.js -c -m -o ./dist/dagre-d3.min.js --source-map ./dist/dagre-d3.min.js.map",
     "build-lib": "npm run copy-demos && babel src -d lib --presets es2015 --plugins add-module-exports",
