--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
   "plugins": ["add-module-exports"],
-  "presets": ["es2015"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": ["last 2 versions", "ie >= 10"]
+        },
+        "forceAllTransforms:": true
+      }
+    ]
+  ]
 }
